--- a/weatherforecastint/templates/getweather.html
+++ b/weatherforecastint/templates/getweather.html
@@ -115,8 +115,8 @@
         <div class="weather-info">
             <h2>Weather Report for {{ city }}</h2>
             <div class="weather-icons">
-                <span class="weather-icon sun">&#9728;</span><span class="sun">Sun</span>
-                <span class="weather-icon clouds">&#9729;</span><span class="clouds">Clouds</span>
+                <span class="weather-icon sun">&#9728;</span><span class="sun">Sun     .</span>
+                <span class="weather-icon clouds">&#9729;</span><span class="clouds">Clouds    .</span>
                 <span class="weather-icon rain">&#9730;</span><span class="rain">Rain</span>
             </div>
             <pre>{{ weather_data|safe }}</pre>
